# funannotate2-addons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: production-release.yml  test-release.yml  tests.yml
funannotate2_addons/: __init__.py  __main__.py  antismash.py  emapper.py  iprscan.py  log.py  signalp.py  signalp6.py  utilities.py  utils.py
tests/: README.md
tests/fixtures/iprscan/: current_namespace_minimal.xml
tests/unit/: test_antismash.py  test_cli.py  test_emapper.py  test_iprscan.py  test_signalp.py  test_signalp6.py  test_utilities.py
